# FauzanEngine

./: .gitignore  .gitmodules  NeoEngineBridge.java.tmp  README.md
android/app/src/main/jni/: CMakeLists.txt  NeoEngineBridge.cpp
engine/Source/NeoEngine/: AIControllerCore.cpp  AIControllerCore.h  AIMassSystem.cpp  ActorCore.cpp  ActorCore.h  AssetManagerCore.cpp  AssetManagerCore.h  CMakeLists.txt  CameraManagerCore.cpp  CameraManagerCore.h  CharacterCore.cpp  CharacterCore.h  ECSManager.cpp  ECSManager.h  GameInstanceCore.cpp  GameInstanceCore.h  GameModeCore.cpp  GameModeCore.h  GameStateCore.cpp  GameStateCore.h  HUDCore.cpp  HUDCore.h  InputConfigCore.cpp  InputConfigCore.h  NeoEditor.cpp  NeoEditor.h  NeoEditorGizmo.cpp  NetworkComponentCore.cpp  NetworkComponentCore.h  PlayerControllerCore.cpp  PlayerControllerCore.h  PlayerStateCore.cpp  PlayerStateCore.h  SaveGameCore.cpp  SaveGameCore.h  UIManager.cpp  UIManager.h  UserWidgetCore.cpp  UserWidgetCore.h
engine/Source/NeoEngine/AI/: AIManager.cpp  AIManager.h  Gemma4Integration.cpp  Gemma4Integration.h  HermesIntegration.cpp  HermesIntegration.h  OpenCodeIntegration.cpp  OpenCodeIntegration.h  RufloIntegration.cpp  RufloIntegration.h
engine/Source/NeoEngine/AI/BehaviorTree/: BehaviorTree.cpp  BehaviorTree.h
engine/Source/NeoEngine/AI/Crowd/: CrowdSimulation.cpp  CrowdSimulation.h
engine/Source/NeoEngine/AI/ML/: MLNPCBehavior.cpp  MLNPCBehavior.h
engine/Source/NeoEngine/AI/Navigation/: NavigationMesh.cpp  NavigationMesh.h
engine/Source/NeoEngine/Animation/: AnimationClip.cpp  AnimationClip.h  AnimationGraph.cpp  AnimationGraph.h  AnimationPlayer.cpp  AnimationPlayer.h  Bone.cpp  Bone.h  Skeleton.cpp  Skeleton.h  Skinning.cpp  Skinning.h  SkinningGPU.cpp  SkinningGPU.h  skinning.vert
engine/Source/NeoEngine/Asset/GLTF/: GLBLoader.cpp  GLBLoader.h  GLTFAccessor.cpp  GLTFAccessor.h  GLTFAnimation.cpp  GLTFAnimation.h  GLTFGPUUploader.cpp  GLTFGPUUploader.h  GLTFJson.h  GLTFLoader.cpp  GLTFLoader.h  GLTFMaterialBuilder.cpp  GLTFMaterialBuilder.h  GLTFMesh.h  GLTFMeshBuilder.cpp  GLTFMeshBuilder.h  GLTFParser.cpp  GLTFParser.h  GLTFSkeleton.cpp  GLTFSkeleton.h  GLTFTextureLoader.cpp  GLTFTextureLoader.h
engine/Source/NeoEngine/Autonomous/: AutonomousManager.cpp  FaultDetector.h
engine/Source/NeoEngine/Autonomous/Autonomous/: DecisionEngine.h  SelfHealer.h  TelemetryBus.h
engine/Source/NeoEngine/Component/: Position.h  Velocity.h
engine/Source/NeoEngine/Core/: Config.h  Core.cpp  Engine.cpp  Engine.h  EngineLoop.cpp  EngineLoop.h  GPUBuffer.h  NeoTime.cpp  NeoTime.h  Object.cpp  Object.h  Subsystem.h  SubsystemManager.cpp  SubsystemManager.h  Vertex.h
engine/Source/NeoEngine/Core/Debug/: CoreValidation.cpp  CrashHandler.cpp  CrashHandler.h  FrameProfiler.h  Log.cpp  Log.h  LogCategory.h  LogChannel.h  LogLevel.h  LogMacros.h  Logger.cpp  Logger.h  MemoryMacros.h  MemoryTracker.cpp  MemoryTracker.h  Stats.cpp  Stats.h
engine/Source/NeoEngine/Core/ECS/: Archetype.h  ArchetypeChunk.h  ArchetypeIterator.h  ArchetypeManager.h  ArchetypeRegistry.h  ArchetypeStorage.h  ChunkIterator.h  ChunkedFullEngine.h  ChunkedMovementSystem.h  ChunkedReactiveSystem.h  ChunkedSystems.h  Component.h  ComponentManager.h  ComponentPool.h  ComponentStorage.h  ComponentType.h  ECSGPUBridge.cpp  ECSGPUBridge.h  ECSManager.h  ECSParallelExample.h  Entity.h  Entity.hpp  EntityCommandBuffer.h  EntityManager.cpp  EntityManager.h  EntitySnapshot.h  GPUEntityBridge.h  IComponentStorage.h  ISystem.h  LiveEditorAuto.h  LiveLambdaEditorGUI.h  LockFreeComponentStorage.h  LockFreeSparseSet.h  MoveSystem.h  MovementSystem.h  ParallelScheduler.hpp  ReactiveEngine.h  ReactiveSystem.h  Registry.h  RegistrySystem.h  (+15 more)
engine/Source/NeoEngine/Core/GPU/: GPUBufferPool.cpp  GPUBufferPool.h  GPUComputeSystem.h  GPUMemoryBudget.cpp  GPUMemoryBudget.h  GPUTextureCache.cpp  GPUTextureCache.h  MeshStreamer.cpp  MeshStreamer.h  TextureStreamer.cpp  TextureStreamer.h
engine/Source/NeoEngine/Core/Geometry/: MeshData.h
engine/Source/NeoEngine/Core/Log/: Logger.cpp  Logger.h
engine/Source/NeoEngine/Core/Math/: Mat4.h  Mat4_Transform.h  MathTypes.h  MathUtils.h  Quaternion.h  Simd.hpp  Transform.h  Vec3.hpp
engine/Source/NeoEngine/Core/Memory/: EngineAllocator.h  FrameAllocator.h  GarbageCollector.cpp  GarbageCollector.h  LinearAllocator.cpp  LinearAllocator.h  MemoryAllocator.cpp  MemoryBlock.h  MemoryManager.cpp  MemoryManager.h  PoolAllocator.cpp  PoolAllocator.h
engine/Source/NeoEngine/Core/Object/: ObjectBase.cpp  ObjectBase.h  ObjectID.h  ObjectRegistry.cpp  ObjectRegistry.h  ReflectionMacros.h  TypeInfo.h
engine/Source/NeoEngine/Core/Physics/: PhysicsCore.h  (+1 more)
engine/Source/NeoEngine/ECS/: Component.h  ComponentStorage.h  Entity.h  EntityManager.cpp  EntityManager.h  System.h  SystemManager.cpp  SystemManager.h  World.cpp  World.h
engine/Source/NeoEngine/Editor/: EditorProvider.cpp  EditorProvider.h
engine/Source/NeoEngine/FramePipeline/: FrameContext.h  FramePacer.h  FramePipeline.h  FrameQueue.h  FrameSync.h  RenderAhead.h
engine/Source/NeoEngine/Memory/: NeoMemory.cpp
engine/Source/NeoEngine/Physics/: BVH.cpp  BVH.h  Collider.cpp  Collider.h  CollisionSAT.cpp  CollisionSAT.h  ConstraintSolver.cpp  ConstraintSolver.h  PhysicsSystem.hpp  PhysicsWorld.cpp  PhysicsWorld.h  RigidBody.cpp  RigidBody.h
engine/Source/NeoEngine/Platform/: Platform.cpp  Platform.h  PlatformFS.h  PlatformTime.cpp  PlatformTime.h  PlatformTypes.h
engine/Source/NeoEngine/RHI/: NeoRHI.cpp
engine/Source/NeoEngine/Renderer/: GPUDrivenRenderer.cpp  GPUDrivenRenderer.h  GPUFrustumCulling.cpp  GPUFrustumCulling.h  MeshletRenderer.cpp  MeshletRenderer.h
engine/Source/NeoEngine/Scene/: SceneGraph.cpp  SceneGraph.h  SceneNode.cpp  SceneNode.h  Transform.cpp  Transform.h
engine/Source/NeoEngine/Shaders/: movement.comp  movement.spv
engine/Source/NeoEngine/Streaming/: Residency.h  SparseBuffer.h  StreamManager.h  StreamQueue.h  StreamRequest.h  StreamWorker.h  VirtualTexture.h
engine/Source/NeoEngine/World/: NeoWorld.cpp  NeoWorld.h  ProceduralWorldGenerator.cpp
(+205 files in other folders)
